// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot Tests > ChallengeCard matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="border rounded-[12px] p-6 shadow-sm flex flex-col justify-between transition-all duration-300 bg-white border-gray-100 hover:shadow-md hover:-translate-y-0.5"
  >
    <div
      class="space-y-3"
    >
      <div
        class="flex justify-between items-start gap-4"
      >
        <h2
          class="text-base font-bold text-gray-900 leading-snug"
        >
          Bike to work
        </h2>
        <div
          class="flex items-center gap-2 shrink-0"
        >
          <span
            class="text-[10px] font-extrabold px-2 py-0.5 rounded-full border uppercase tracking-wider bg-amber-50 text-amber-700 border-amber-100"
          >
            Medium
          </span>
        </div>
      </div>
      <p
        class="text-xs text-gray-500 font-medium leading-relaxed"
      >
        Use a bike
      </p>
      <div
        class="text-xs font-bold text-gray-400 bg-gray-50 border border-gray-100/50 rounded-lg px-2.5 py-1.5 w-fit"
      >
        Saves: 
        <span
          class="text-[#166E52] font-extrabold"
        >
          5.5 kg CO₂
        </span>
      </div>
    </div>
    <div
      class="mt-6 space-y-4"
    >
      <div
        class="space-y-1.5"
      >
        <div
          class="flex justify-between text-[11px] font-bold text-gray-400"
        >
          <span>
            Progress
          </span>
          <span>
            50%
          </span>
        </div>
        <div
          aria-label="Bike to work progress"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="50"
          class="w-full bg-gray-100 rounded-full h-2 overflow-hidden"
          role="progressbar"
        >
          <div
            class="h-full transition-all duration-500 rounded-full bg-[#EF9F27]"
            style="width: 50%;"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-2 pt-1"
      >
        <button
          aria-label="Increase progress for Bike to work"
          class="flex-1 text-center bg-gray-50 hover:bg-gray-100 text-gray-700 border border-gray-200 py-2 rounded-xl text-xs font-bold transition-all cursor-pointer"
          type="button"
        >
          +10%
        </button>
        <button
          aria-label="Mark Bike to work as complete"
          class="flex-1 text-center bg-[#166E52] hover:bg-[#0F6E56] text-white py-2 rounded-xl text-xs font-bold transition-all shadow-sm cursor-pointer"
          type="button"
        >
          Complete
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snapshot Tests > EmissionsPreview with value=0 matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="bg-white rounded-[12px] border border-gray-100 shadow-sm p-6 sticky top-24 space-y-6"
  >
    <h2
      class="text-lg font-bold text-gray-900"
    >
      Calculated Impact
    </h2>
    <div
      class="bg-[#F8FAF9] rounded-2xl border border-gray-100 p-6 flex flex-col items-center justify-center text-center py-10 transition-all duration-500 hover:shadow-inner relative overflow-hidden group"
    >
      <div
        class="absolute top-0 right-0 w-24 h-24 bg-[#166E52]/5 rounded-full blur-2xl group-hover:scale-125 transition-transform duration-500"
      />
      <span
        class="text-xs font-extrabold uppercase tracking-widest text-[#166E52] bg-[#166E52]/5 px-3 py-1 rounded-full border border-[#166E52]/10 mb-4"
      >
        Estimated Emissions
      </span>
      <div
        class="flex items-baseline justify-center gap-1.5 mb-1.5"
      >
        <span
          class="text-5xl font-black text-gray-900 tracking-tight transition-all duration-300"
        >
          0
        </span>
        <span
          class="text-base font-extrabold text-gray-400"
        >
          kg
        </span>
      </div>
      <span
        class="text-xs font-semibold text-gray-500"
      >
        CO₂ Equivalent
      </span>
    </div>
    <div
      class="p-4 bg-[#166E52]/5 border border-[#166E52]/10 rounded-xl"
    >
      <h2
        class="text-xs font-bold text-[#166E52] uppercase tracking-wider mb-1"
      >
        Calculation Method
      </h2>
      <p
        class="text-[11px] text-gray-500 leading-relaxed font-medium"
      >
        Calculated as: Distance (0 km) × Factor based on vehicle selection.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snapshot Tests > EmissionsPreview with value=12.5 matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="bg-white rounded-[12px] border border-gray-100 shadow-sm p-6 sticky top-24 space-y-6"
  >
    <h2
      class="text-lg font-bold text-gray-900"
    >
      Calculated Impact
    </h2>
    <div
      class="bg-[#F8FAF9] rounded-2xl border border-gray-100 p-6 flex flex-col items-center justify-center text-center py-10 transition-all duration-500 hover:shadow-inner relative overflow-hidden group"
    >
      <div
        class="absolute top-0 right-0 w-24 h-24 bg-[#166E52]/5 rounded-full blur-2xl group-hover:scale-125 transition-transform duration-500"
      />
      <span
        class="text-xs font-extrabold uppercase tracking-widest text-[#166E52] bg-[#166E52]/5 px-3 py-1 rounded-full border border-[#166E52]/10 mb-4"
      >
        Estimated Emissions
      </span>
      <div
        class="flex items-baseline justify-center gap-1.5 mb-1.5"
      >
        <span
          class="text-5xl font-black text-gray-900 tracking-tight transition-all duration-300"
        >
          12.5
        </span>
        <span
          class="text-base font-extrabold text-gray-400"
        >
          kg
        </span>
      </div>
      <span
        class="text-xs font-semibold text-gray-500"
      >
        CO₂ Equivalent
      </span>
      <div
        class="mt-6 pt-5 border-t border-gray-200/60 w-full text-left space-y-2.5 animate-fadeIn"
      >
        <p
          class="text-[11px] font-bold uppercase tracking-wider text-gray-400"
        >
          Environmental Equivalence
        </p>
        <div
          class="space-y-1.5"
        >
          <p
            class="text-xs font-semibold text-gray-700 flex items-center gap-2"
          >
            🌲 
            <span>
              Requires 
              <b>
                1
              </b>
               tree-days to absorb
            </span>
          </p>
          <p
            class="text-xs font-semibold text-gray-700 flex items-center gap-2"
          >
            💡 
            <span>
              Same as running a LED bulb for 
              <b>
                1375
              </b>
               hours
            </span>
          </p>
        </div>
      </div>
    </div>
    <div
      class="p-4 bg-[#166E52]/5 border border-[#166E52]/10 rounded-xl"
    >
      <h2
        class="text-xs font-bold text-[#166E52] uppercase tracking-wider mb-1"
      >
        Calculation Method
      </h2>
      <p
        class="text-[11px] text-gray-500 leading-relaxed font-medium"
      >
        Calculated as: Distance (10 km) × Factor based on vehicle selection.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snapshot Tests > StatCard matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="bg-white rounded-[12px] p-6 border border-gray-100 shadow-sm transition-all duration-300 hover:shadow-md hover:-translate-y-0.5 flex flex-col justify-between"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <span
        class="text-sm font-medium text-gray-500"
      >
        Test Stat
      </span>
      <div
        class="p-2.5 bg-[#166E52]/10 rounded-xl text-[#166E52]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-flame"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
          />
        </svg>
      </div>
    </div>
    <div
      class="flex items-baseline gap-1.5"
    >
      <span
        class="text-3xl font-bold text-gray-900 tracking-tight"
      >
        42
      </span>
      <span
        class="text-sm font-medium text-gray-500"
      >
        kg
      </span>
    </div>
    <div
      class="mt-4 flex items-center gap-2"
    >
      <span
        class="inline-flex items-center gap-0.5 px-2 py-0.5 rounded-full text-xs font-semibold text-red-600 bg-red-50 border border-red-100"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-up-right shrink-0"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7h10v10"
          />
          <path
            d="M7 17 17 7"
          />
        </svg>
        Above avg
      </span>
      <span
        class="text-xs text-gray-400"
      >
        vs last period
      </span>
    </div>
  </div>
</DocumentFragment>
`;
